--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -5,10 +5,7 @@ name: Java CI with Gradle
 
 on:
   push:
-  watch: 
-  - master
-  - TestNG
-  - junit4
+  watch: [ master ]
   pull_request:
     branches: [ master ]
 
